--- a/index.html
+++ b/index.html
@@ -5,42 +5,215 @@
         <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">  -->
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>TEMPLATE INDEX.HTML</title>
+        <title>Portfolio</title>
         
     </head>
     <body>
         <div class="container">
-            The container that wraps the whole page
+            <!-- The container that wraps the whole page -->
             <div class="header">
                 <!-- HEADER CONTENT -->
-                HEADER
+                <div class="bar">
+                    <h1 class="foo">Jayne Doe</h1>
+                    <h3 class="foo">Master of Shadow and the Internet!</h3>
+                </div>
             </div>
-            <div class="nav">
-                <!-- Nav content -->
-                NAV
-
-            </div>
-            <div class="main">
-                <!-- MAIN CONTENT-->
-                MAIN
+            <div class="top">
+                <!-- top content -->
                 <div class="box">
                     <!-- BOX CONTENT -->
-                    BOX
+                    <img src="Portfolio_images/photo_of_me.jpg" alt="photo of me">
 
                 </div>
                 <div class="box">
                     <!-- BOX CONTENT -->
-                    BOX
+                    <h4>About...</h4>
+                    <p>
+                        Hello! I'm an extermely driven and creative Full Stack
+                        Developer who is currently open for career opportunities
+                        as a front-end or back-end web developer in the Greater Seattle
+                        area.
+                    </p>
+                    <p>
+                        I'm a recent graduate of Coding Dojo, a coding school located in Bellevue, 
+                        WA that teaches 3 full stacks in 3 months. I'm capable of learning new 
+                        technologies very quickly and am always looking for opportunities to 
+                        further expand my skills and grow as a developer.
+                    </p>
+                    <a href="#">Continue reading...</a> 
 
 
                 </div>
-
-
-                
+            </div>
+            <div class="middle">
+                <!-- middle CONTENT-->
+                <div class="box">
+                    <!-- BOX CONTENT -->
+                    <div class="part1">
+                        <h4>La Mode</h4>
+                        <img src="Portfolio_images/lamode.png" alt="la mode">
+                        <p>
+                            La Mode is an Ecommerce website for designed to market 
+                            various clothing products. Users are able to view the available 
+                            garments, select their desired quantity, and compile a shopping 
+                            cart for making a final purchase.
+                        </p>
+                    </div>
+                    <div class="part2">
+                        <h4>Technologies:</h4>
+                        <ul>
+                            <li>
+                                <img src="Portfolio_images/php.png" alt="php">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/codeigniter.png" alt="CodeIgniter">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/jQuery.png" alt="jQuery">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/ajax.png" alt="ajax">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/mysql.png" alt="mysql">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/HTML.png" alt="html">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/CSS.png" alt="css">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/bootstrap.png" alt="bootstrap">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part3">
+                        <a href="#"> La Mode</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <!-- BOX CONTENT -->
+                    <div class="part1">
+                        <h4>Family Contacts</h4>
+                        <img src="Portfolio_images/familycontacts.png" alt="family contacts">
+                        <p>
+                            Family Contacts is a free application for managing, sharing, and 
+                            visualizing your family relationships for both extended and immediate 
+                            family. As an essential feature of hte project, your log-in information 
+                            determines who you can see and reveals how people are related to you.
+                        </p>
+                    </div>
+                    <div class="part2">
+                        <h4>Technologies:</h4>
+                        <ul>
+                            <li>
+                                <img src="Portfolio_images/JavaScript.png" alt="javascript">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/codeigniter.png" alt="CodeIgniter">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/expressjs.png" alt="expressjs">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/angular.png" alt="angular">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/nodejs.png" alt="nodejs">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/HTML.png" alt="html">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/CSS.png" alt="css">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/socket.png" alt="socket">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part3">
+                        <a href="#"> Family Contacts</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <!-- BOX CONTENT -->
+                    <div class="part1">
+                        <h4>fiveEleven</h4>
+                        <img src="Portfolio_images/fiveEleven.png" alt="five eleven">
+                        <p>
+                            Five Eleven is a data visualization project built on the Python software 
+                            stack. The application transforms the developer job-hunt into a more visual
+                            user friendly experience. Based on location, technology popularity, and 
+                            other vast data sets, users may easily visualize the varying sizes and 
+                            concentrations of the junior developer jon marker across the nation.
+                        </p>
+                    </div>  
+                    <div class="part2">
+                        <h4>Technologies:</h4>
+                        <ul>
+                            <li>
+                                <img src="Portfolio_images/python.png" alt="python">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/django.png" alt="django">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/d3.png" alt="d3">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/angular.png" alt="angular">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/sqlite.png" alt="sqlite">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/HTML.png" alt="html">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/CSS.png" alt="css">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/JavaScript.png" alt="javascript">
+                            </li>
+                            <li>
+                                <img src="Portfolio_images/materialize.png" alt="materialize">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part3">
+                        <a href="#"> fiveEleven</a>
+                    </div>
+                </div>
             </div>    
             <div class="footer">
                 <!-- FOOTER CONTENT -->
-                FOOTER
+                <p>
+                    jdoe@gmails.com | 206-555-1212
+                </p>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img alt="jaynedev" src="Portfolio_images/github.png"> jaynedev
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img alt="jayne-doe" src="Portfolio_images/linkedin.png"> jayne-doe
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img alt="jdtweets" src="Portfolio_images/twitter.png"> jdtweets
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img alt="jaynedev" src="Portfolio_images/codepen.png"> jaynedev
+                        </a>
+                    </li>
+                </ul>
 
 
             </div>
