--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">  -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>Portfolio</title>
         
@@ -20,7 +20,7 @@
             </div>
             <div class="top">
                 <!-- top content -->
-                <div class="box">
+                <div class="portpic">
                     <!-- BOX CONTENT -->
                     <img src="Portfolio_images/photo_of_me.jpg" alt="photo of me">
 
@@ -29,7 +29,7 @@
                     <!-- BOX CONTENT -->
                     <h4>About...</h4>
                     <p>
-                        Hello! I'm an extermely driven and creative Full Stack
+                        Hello! I'm an extremely driven and creative Full Stack
                         Developer who is currently open for career opportunities
                         as a front-end or back-end web developer in the Greater Seattle
                         area.
