--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="header">
                 <!-- HEADER CONTENT -->
                 <div class="bar">
-                    <h1 class="foo">Jayne Doe</h1>
-                    <h3 class="foo">Master of Shadow and the Internet!</h3>
+                    <h1>Jayne Doe</h1>
+                    <h3>Master of Shadow and the Internet!</h3>
                 </div>
             </div>
             <div class="top">
